@@ -9,4 +9,4 @@ var hdrs = {
 	"download" : "download.html",
 };
 
-var version = "1.02";
+var version = "1.03";
